--- a/src/components/overview/overview.module.scss
+++ b/src/components/overview/overview.module.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .graphicMode {
+    overflow: hidden;
+  }
+
   .graphicsWrapper {
     flex: 0 0 auto;
     width: 950px;
