--- a/src/components/skills/skills.module.scss
+++ b/src/components/skills/skills.module.scss
@@ -2,11 +2,11 @@
 
 .skills {
   @include mixins.mobile {
-    h3 {
-      margin-bottom: 0.2rem;
+    h2 {
+      margin-bottom: 2rem;
     }
   }
-  
+
   .skillsGroupsContainer {
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +24,7 @@
     margin-bottom: 0.75rem;
 
     @include mixins.mobile {
+      padding-top: 0;
       padding-right: 0.1em;
       margin-bottom: 0;
     }
